@@ -1,3 +1,10 @@
+Sat Jan 13 19:06:23 2007  Lee Noar  <leenoar@ntlworld.com>
+
+	* elf/libtool.m4: Change names of shared library and symlinks to
+	something that is recognised by GCC (effects libunixlib and libm
+	only). In the dlopen test, look for riscos at the end of the
+	string rather than the beginning.
+
 Fri Jan 12 21:29:54 2007  Lee Noar  <leenoar@ntlworld.com>
 
 	* elf/convert-unixlib.pl: Link libunixlib.so with shared libgcc.
